syntax = "proto3";
option csharp_namespace = "GRPCServer";
package product;

service ProductService {
    rpc GetAllProducts(GetProductRequest) returns (GetProductsResponse){}
}

message GetProductRequest{

}

message GetProductsResponse{
    string sku = 1;
    string name = 2;
    double price = 3;
}

